# asan-innovators-ai-assistant

./: Procfile  render.yaml
backend/: .gitignore  list_models.py  pyproject.toml
backend/app/: chat.py  main.py
backend/app/core/: config.py  llm.py  sanitize.py
backend/app/rag/: calibrate.py  ingest.py  metadata.py  pipeline.py  retriever.py
backend/data/: 00_company_overview.md  01_services.md  02_technologies.md  03_careers_and_internships.md  04_contact.md  05_faq.md  06_timeline.md  07_company_facts.md
backend/data/company/: 01-company-overview.md  02-beliefs-and-philosophy.md  03-company-timeline.md  04-company-metrics.md  05-methodology-and-infrastructure.md  06-leadership.md  07-company-culture.md  08-certifications.md
backend/data/faq/: 01-frequently-asked-questions.md
backend/data/other/: 01-industries-served.md  02-technology-stack.md  03-careers-and-internships.md  04-contact-information.md  05-social-media-links.md  06-website-navigation-and-footer.md  07-differentiators.md
backend/data/products/: 01-products-overview.md  02-leadpilot.md  03-upcoming-products.md
backend/data/projects/: 00-projects-overview.md  01-the-prime-developers.md  02-couple-of-hours.md  03-personiks.md  04-ai-powered-lms.md  05-wescan.md  06-sanharsgt-healthcare.md  07-megaa-app.md  08-getmyhotel.md  09-blue-pixel.md  10-gender-transformation.md  11-aasapass.md  12-gatox.md  13-optex-opticians.md  14-royal-spa-mudhra.md  15-automotive-services-app.md  16-client-companies.md
backend/data/services/: 01-services-overview.md  02-web-development.md  03-mobile-apps.md  (+4 more)
(+26 files in other folders)
