[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "llama-index>=0.14.23",
    "llama-index-embeddings-gemini>=0.4.2",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-google-genai>=0.9.6",
    "llama-index-vector-stores-qdrant>=0.10.2",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.10.0",
    "uvicorn[standard]>=0.51.0",
]